still trying to fix iframe view on mobile

--- a/style.css
+++ b/style.css
@@ -57,3 +57,5 @@
 .show {
     display: block;
 }
+
+html, body { height: 100% }
